# clipee

./: Cargo.toml  LICENSE-MIT.md
windows/: Cargo.toml
windows/src/: error.rs  format.rs  lib.rs  lock.rs
windows/src/error/: windows.rs
windows/src/format/: bitmap.rs  files.rs  string.rs
windows/tests/: files.rs  string.rs
