[package]
name = "clipee-windows"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Absolucy/clipee"

[dependencies]
image = { version = "0.24.1", optional = true, default-features = false, features = ["tiff"] }
once_cell = "1.10.0"
parking_lot = "0.12.0"
scopeguard = "1.1.0"
thiserror = "1.0.30"
windows = { version = "0.34.0", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_DataExchange",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Memory",
	"Win32_System_SystemServices",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }
wtf8 = "0.1.0"

[features]
default = ["image"]
